--- a/package.json
+++ b/package.json
@@ -12,5 +12,8 @@
   "devDependencies": {
     "@types/node": "^16.7.5",
     "typescript": "^4.4.2"
+  },
+  "dependencies": {
+    "http-status-codes": "^2.1.4"
   }
 }
